<resources>
    <string name="app_name">GasTrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_in_progress">Transaction in progress...</string>
    <string name="debtors">Debtors</string>
    <string name="add">add</string>
    <string name="total_credit_balance">Total credit balance</string>
    <string name="debt">Debt</string>
    <string name="transact">Transact</string>
    <string name="expenses">Expenses</string>
    <string name="gas_refill">Refill</string>
    <string name="cylinder_sales">New Gas</string>
    <string name="accessories">Accessories</string>
    <string name="see_all">See all</string>
    <string name="total_expenditure">Total expenditure</string>
    <string name="total_sales">Total sales</string>
    <string name="transactions_today">Transactions today</string>
    <string name="sample_date">17 July 2022</string>
    <string name="olyx_gas">Olyx Gas</string>
    <string name="expenditure">Expenditure</string>
    <string name="search_hint">Search...</string>
    <string name="orders">Orders</string>
    <string name="sell_gas">Sell gas</string>
    <string name="sell_accessory">Sell accessory</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="total_in_kes">Total in KES</string>
    <string name="total_spend_kes">Total cost in KES</string>
    <string name="_0_00">0.00</string>
    <string name="check_out">Check out</string>
    <string name="back">back</string>
    <string name="stock">Stock</string>
    <string name="description">Description</string>
    <string name="available">Available</string>
    <string name="email_sample">email@sample.com</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="password_hint">strong password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="terminal">terminal id</string>
    <string name="next">Continue</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hint_username">username</string>
    <string name="name">Username</string>
    <string name="user_account">Create account</string>
    <string name="create_user_account">Create user account</string>
    <string name="please_enter_terminal_id">Please key in an authorised terminal ID</string>
    <string name="we_are_almost_in_one_more_step">We are almost in, one more step</string>
    <string name="please_select_attending_store">Please select your store</string>
    <string name="price">Price</string>
    <string name="logout_from_the_app">Logout from the app?</string>
    <string name="logout">Logout</string>
    <string name="not_now">Not now</string>
    <string name="yes">Yes, log me out</string>
    <string name="sign_out_notification">You can always login later. Until then, your account stays safe.</string>
    <string name="manage_transaction">Manage this transaction?</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="update_transaction">Update transaction</string>
    <string name="access_denied">Access denied!</string>
    <string name="check_with_admin">You can no longer access your account. Please check with your supervisor.</string>
    <string name="session_expired">Session expired.</string>
    <string name="session_expired_note">Please sign in to access your account.</string>
    <string name="catalogue">Catalogue</string>

</resources>