<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.TerminalIdFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/accent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:background="@drawable/layout_background"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="Let's get you started,"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:text="@string/please_enter_terminal_id"
            android:textColor="@color/text"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edt_terminal_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edt_background"
            android:hint="@string/terminal"
            android:inputType="textCapWords"
            android:textColorHint="@color/text"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />


        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:padding="10dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/accent" />


    </LinearLayout>

</RelativeLayout>